--- a/package.json
+++ b/package.json
@@ -2,15 +2,34 @@
   "name": "ARCHANGEL_PROJECTS",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development ./shuleonline/frontend/src/index.js --output ./shuleonline/frontend/static/frontend/main.js",
+    "build": "webpack --mode production ./shuleonline/frontend/src/index.js --output ./shuleonline/frontend/static/frontend/main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samkahunga65/shuleonline.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/samkahunga65/shuleonline/issues"
+  },
+  "homepage": "https://github.com/samkahunga65/shuleonline#readme",
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
