--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Babel==2.8.0
 cffi==1.14.0
 cryptography==2.8
 Django==3.0.4
+django-cors-headers==3.2.1
 django-phonenumber-field==4.0.0
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
