--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==3.2.1
 django-phonenumber-field==4.0.0
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
+gunicorn==20.0.4
 phonenumberslite==8.12.0
 pycparser==2.20
 pytz==2019.3
